<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:fillViewport="true">
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
 <TextView
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:text="@string/datarecordingintro"
     style="@style/text"/>
 <TextView
     android:layout_width="wrap_content"
     style="@style/text"
     android:layout_height="wrap_content"
     android:text="@string/recording_settings"/>
 <TextView
     android:layout_width="wrap_content"
     style="@style/text"
     android:layout_height="wrap_content"
     android:text="@string/recordingstartandstop"/>
 <TextView
     android:layout_width="wrap_content"
     style="@style/text"
     android:layout_height="wrap_content"
     android:text="@string/frequency_of_data_recording"/>
 <TextView
     android:layout_width="wrap_content"
     style="@style/text"
     android:layout_height="wrap_content"
     android:text="@string/uploading"/>
</LinearLayout>
 </ScrollView>