<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group  android:id="@+id/group_1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_accelerometer"
            android:icon="@drawable/ic_acc"
            android:title="@string/nav_accelerometer" />
        <item
            android:id="@+id/nav_magnetometer"
            android:icon="@mipmap/if_magnet_173051"
            android:title="@string/nav_magnetometer" />
        <item
            android:id="@+id/nav_gps"
            android:icon="@drawable/ic_gps_fixed_black_24dp"
            android:title="@string/nav_gps" />
        <item
            android:id="@+id/nav_gyro"
            android:icon="@drawable/ic_gps_fixed_black_24dp"
            android:title="Gyroscope" />
        <item
            android:id="@+id/nav_rotation"
            android:icon="@drawable/ic_acc"
            android:title="Rotation" />
    </group>

    <group android:id="@+id/group_2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_view_files"
            android:title="View Files" />
        <item
            android:id="@+id/nav_settings"
            android:title="Settings" />
    </group>

</menu>